kubernetes/search/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: searxng
  namespace: searxng
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: searxng
  template:
    metadata:
      labels:
        app: searxng
    spec:
      containers:
        - name: searxng
          image: docker.io/searxng/searxng:latest@sha256:854f239d5c181db9c4282cd0ffc1737a61232dd6ad0ea964028b96df17d7758a
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: config
              mountPath: /etc/searxng
            - name: data
              mountPath: /var/cache/searxng
      volumes:
        - name: config
          hostPath:
            path: /data/searxng
            type: DirectoryOrCreate
        - name: data
          hostPath:
            path: /data/searxng-data
            type: DirectoryOrCreate
