kubernetes/search/service.yml
apiVersion: v1
kind: Service
metadata:
  name: searxng
  namespace: searchngx
spec:
  selector:
    app: searxng
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
